@@ -1,3 +1,8 @@
+2008-05-31  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* Makefrag.am (binutils/binutils.build/build.stamp)
+	(binutils/binutils.build/install.stamp): Explicitly pass `MAKEINFO'.
+
 2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* Makefrag.am: New file.
